// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttackAbilities matches the snapshot 1`] = `
<div>
  <AbilityToggle
    active={false}
    id="blastToggle"
    label="Blast"
    onActiveChanged={[MockFunction]}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="criticalXToggle"
    label="Critical"
    maxValue={3}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityToggle
    active={false}
    id="duelistAttackToggle"
    label="Duelist"
    onActiveChanged={[MockFunction]}
    visible={true}
  />
  <AbilityToggle
    active={false}
    id="highVelocityToggle"
    label="High Velocity"
    onActiveChanged={[MockFunction]}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="impactXToggle"
    label="Impact"
    maxValue={9}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="ionXToggle"
    label="Ion"
    maxValue={2}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityToggle
    active={false}
    id="jediHunterToggle"
    label="Jedi Hunter"
    onActiveChanged={[MockFunction]}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="lethalXToggle"
    label="Lethal"
    maxValue={2}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityToggle
    active={false}
    id="makashiMasteryToggle"
    label="Makashi Mastery"
    onActiveChanged={[MockFunction]}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="pierceXToggle"
    label="Pierce"
    maxValue={3}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="preciseXToggle"
    label="Precise"
    maxValue={3}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="ramXToggle"
    label="Ram"
    maxValue={2}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="sharpshooterXToggle"
    label="Sharpshooter"
    maxValue={2}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
</div>
`;

exports[`AttackAbilities matches the snapshot for simplified view 1`] = `
<div>
  <AbilityToggle
    active={false}
    id="blastToggle"
    label="Blast"
    onActiveChanged={[MockFunction]}
    visible={false}
  />
  <AbilityXToggle
    active={false}
    id="criticalXToggle"
    label="Critical"
    maxValue={3}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityToggle
    active={false}
    id="duelistAttackToggle"
    label="Duelist"
    onActiveChanged={[MockFunction]}
    visible={false}
  />
  <AbilityToggle
    active={false}
    id="highVelocityToggle"
    label="High Velocity"
    onActiveChanged={[MockFunction]}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="impactXToggle"
    label="Impact"
    maxValue={9}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="ionXToggle"
    label="Ion"
    maxValue={2}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={false}
  />
  <AbilityToggle
    active={false}
    id="jediHunterToggle"
    label="Jedi Hunter"
    onActiveChanged={[MockFunction]}
    visible={false}
  />
  <AbilityXToggle
    active={false}
    id="lethalXToggle"
    label="Lethal"
    maxValue={2}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityToggle
    active={false}
    id="makashiMasteryToggle"
    label="Makashi Mastery"
    onActiveChanged={[MockFunction]}
    visible={false}
  />
  <AbilityXToggle
    active={false}
    id="pierceXToggle"
    label="Pierce"
    maxValue={3}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="preciseXToggle"
    label="Precise"
    maxValue={3}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
  <AbilityXToggle
    active={false}
    id="ramXToggle"
    label="Ram"
    maxValue={2}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={false}
  />
  <AbilityXToggle
    active={false}
    id="sharpshooterXToggle"
    label="Sharpshooter"
    maxValue={2}
    onActiveChanged={[MockFunction]}
    onValueChanged={[MockFunction]}
    value={1}
    visible={true}
  />
</div>
`;
